--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,3 +1,8 @@
-home = /usr/bin
+home = /home/guest/miniconda/bin
+implementation = CPython
+version_info = 3.13.2.final.0
+virtualenv = 20.31.1
 include-system-site-packages = false
-version = 3.8.10
+base-prefix = /home/guest/miniconda
+base-exec-prefix = /home/guest/miniconda
+base-executable = /home/guest/miniconda/bin/python3.13
