--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,69 @@
-anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1743190139881/work
-annotated-types @ file:///work/perseverance-python-buildout/croot/annotated-types_1728386958747/work
-archspec @ file:///croot/archspec_1709217642129/work
-asttokens==3.0.0
-boltons @ file:///croot/boltons_1737061692168/work
-Brotli @ file:///croot/brotli-split_1736182456865/work
-certifi @ file:///croot/certifi_1745939216646/work/certifi
-cffi @ file:///croot/cffi_1736182485317/work
-charset-normalizer @ file:///croot/charset-normalizer_1721748349566/work
-cloudpickle==3.1.1
-comm==0.2.2
-conda @ file:///croot/conda_1749171252582/work/conda-src
-conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1744662537425/work
-conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1744823864153/work
-conda-content-trust @ file:///work/perseverance-python-buildout/croot/conda-content-trust_1728487058234/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1745607008911/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1731366181659/work
-contourpy==1.3.2
-cryptography @ file:///croot/cryptography_1740577825284/work
-cycler==0.12.1
-debugpy==1.8.14
-decorator==5.2.1
-distlib==0.3.9
-distro @ file:///work/perseverance-python-buildout/croot/distro_1728396110052/work
-executing==2.2.0
-filelock==3.18.0
-fonttools==4.57.0
-frozendict @ file:///work/perseverance-python-buildout/croot/frozendict_1728497542215/work
-fsspec==2025.3.2
-idna @ file:///work/perseverance-python-buildout/croot/idna_1728385935861/work
-ipykernel==6.29.5
-ipython==9.2.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-Jinja2==3.1.6
-joblib==1.5.0
-jsonpatch @ file:///work/perseverance-python-buildout/croot/jsonpatch_1728399595941/work
-jsonpointer==2.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.8
-libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
-llvmlite==0.44.0
-markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1728387994477/work
-MarkupSafe==3.0.2
-matplotlib==3.10.1
-matplotlib-inline==0.1.7
-mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1728387286143/work
-menuinst @ file:///croot/menuinst_1738943416351/work
-mkl-service==2.4.0
-mkl_fft @ file:///io/mkl313/mkl_fft_1730824109137/work
-mkl_random @ file:///io/mkl313/mkl_random_1730823916628/work
-mpmath==1.3.0
-nest-asyncio==1.6.0
-networkx==3.4.2
-numba==0.61.2
-numpy @ file:///croot/numpy_and_numpy_base_1747238018250/work/dist/numpy-2.2.5-cp313-cp313-linux_x86_64.whl#sha256=0e0751551faf5084bae97319f1019238122ff4a3eefee4d271cdc73fe7ee20eb
-nvidia-cublas-cu11==11.11.3.6
-nvidia-cublas-cu12==12.6.4.1
-nvidia-cuda-cupti-cu11==11.8.87
-nvidia-cuda-cupti-cu12==12.6.80
-nvidia-cuda-nvrtc-cu11==11.8.89
-nvidia-cuda-nvrtc-cu12==12.6.77
-nvidia-cuda-runtime-cu11==11.8.89
-nvidia-cuda-runtime-cu12==12.6.77
-nvidia-cudnn-cu11==9.1.0.70
-nvidia-cudnn-cu12==9.5.1.17
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.3.0.4
-nvidia-cufile-cu12==1.11.1.6
-nvidia-curand-cu11==10.3.0.86
-nvidia-curand-cu12==10.3.7.77
-nvidia-cusolver-cu11==11.4.1.48
-nvidia-cusolver-cu12==11.7.1.2
-nvidia-cusparse-cu11==11.7.5.86
-nvidia-cusparse-cu12==12.5.4.2
-nvidia-cusparselt-cu12==0.6.3
-nvidia-nccl-cu11==2.21.5
-nvidia-nccl-cu12==2.26.2
-nvidia-nvjitlink-cu12==12.6.85
-nvidia-nvtx-cu11==11.8.86
-nvidia-nvtx-cu12==12.6.77
-opencv-contrib-python==4.11.0.86
-opencv-python==4.11.0.86
-packaging @ file:///croot/packaging_1734472117206/work
-pandas==2.2.3
-parso==0.8.4
-patsy==1.0.1
-pexpect==4.9.0
-pillow==11.2.1
-platformdirs @ file:///croot/platformdirs_1744273042065/work
-pluggy @ file:///croot/pluggy_1733169602837/work
-prompt_toolkit==3.0.51
-psutil==7.0.0
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pycosat @ file:///croot/pycosat_1736868416091/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic @ file:///croot/pydantic_1734736067156/work
-pydantic_core @ file:///croot/pydantic-core_1734726052986/work
-Pygments @ file:///croot/pygments_1744664109463/work
-pyparsing==3.2.3
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyWavelets==1.8.0
-pyzmq==26.4.0
-requests @ file:///croot/requests_1730999120400/work
-rich @ file:///croot/rich_1732638981168/work
-ruamel.yaml @ file:///croot/ruamel.yaml_1745960305322/work
-ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1745937152469/work
-scikit-learn==1.6.1
-scipy==1.15.3
-seaborn==0.13.2
-setuptools==72.1.0
-six==1.17.0
-stack-data==0.6.3
-statsmodels==0.14.4
-stumpy==1.13.0
-sympy==1.14.0
-threadpoolctl==3.6.0
-torch==2.7.1+cu118
-torchaudio==2.7.1+cu118
-torchvision==0.22.1+cu118
-tornado==6.4.2
-tqdm @ file:///croot/tqdm_1738943501192/work
-traitlets==5.14.3
-triton==3.3.1
-truststore @ file:///croot/truststore_1736550121485/work
-tsfresh==0.21.0
-typing_extensions @ file:///croot/typing_extensions_1734714854207/work
-tzdata==2025.2
-urllib3 @ file:///croot/urllib3_1737133630106/work
-virtualenv==20.31.1
-wcwidth==0.2.13
-wheel==0.45.1
-zstandard @ file:///croot/zstandard_1731356346222/work
+xkit==0.0.0
+wadllib==1.3.3
+usb-creator==0.3.7
+urllib3==1.25.8
+unattended-upgrades==0.1
+ufw==0.36
+ubuntu-pro-client==8001
+ubuntu-drivers-common==0.0.0
+systemd-python==234
+ssh-import-id==5.10
+six==1.14.0
+simplejson==3.16.0
+secretstorage==2.3.1
+screen-resolution-extra==0.0.0
+requests==2.22.0
+requests-unixsocket==0.2.0
+reportlab==3.5.34
+pyyaml==5.3.1
+pyxdg==0.26
+pytz==2019.3
+python-debian==0.1.36+ubuntu1.1
+python-dateutil==2.7.3
+python-apt==2.0.1+ubuntu0.20.4.1
+pyrfc3339==1.1
+pynacl==1.3.0
+pymacaroons==0.13.0
+pyjwt==1.7.1
+pygobject==3.36.0
+pycups==1.9.73
+pycairo==1.16.2
+protobuf==3.6.1
+pillow==7.0.0
+pexpect==4.6.0
+paramiko==2.6.0
+olefile==0.46
+oauthlib==3.1.0
+netifaces==0.10.4
+monotonic==1.5
+markupsafe==1.1.0
+mako==1.1.0
+macaroonbakery==1.3.1
+louis==3.12.0
+lockfile==0.12.2
+lazr.uri==1.0.3
+lazr.restfulclient==0.14.2
+launchpadlib==1.10.13
+language-selector==0.1
+keyring==18.0.1
+idna==2.8
+httplib2==0.14.0
+future==0.18.2
+fasteners==0.14.1
+entrypoints==0.3
+duplicity==0.8.12.0
+distro==1.4.0
+distro-info==0.23+ubuntu1.1
+defer==1.0.6
+dbus-python==1.2.16
+cupshelpers==1.0
+cryptography==2.8
+command-not-found==0.3
+colorama==0.4.3
+click==7.0
+chardet==3.0.4
+certifi==2019.11.28
+brlapi==0.7.0
+blinker==1.4
+bcrypt==3.1.7
+apturl==0.5.2
